* Add SSL / https support along with a script to generate a self-signed cert for integration testing. * Dockerize application with Dockerfile / docker compose (support for port 443 / nginx re-direct). * Add CLI support if arguments are passed to application and update service layer to write directly to a folder. * Increase integration tests for different scenarios including prefix / setting parameters including new CLI mode. * Release to https://start.videofirst.io
